--- a/app/src/main/res/layout/dialog_hill_details.xml
+++ b/app/src/main/res/layout/dialog_hill_details.xml
@@ -7,9 +7,13 @@
         android:id="@+id/hill_dialog_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:scaleType="center"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textAlignment="center"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
