--- a/app/src/main/res/layout/dialog_hill_details.xml
+++ b/app/src/main/res/layout/dialog_hill_details.xml
@@ -61,4 +61,23 @@
             style="?android:attr/buttonBarButtonStyle" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/mark_walked_linear_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="visible" >
+
+        <Button
+            android:id="@+id/hill_marked_walked_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="@string/hill_dialog_mark_walked"
+            style="?android:attr/buttonBarButtonStyle" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
