--- a/app/src/main/res/layout/dialog_hill_details.xml
+++ b/app/src/main/res/layout/dialog_hill_details.xml
@@ -19,7 +19,8 @@
     <TextView
         android:id="@+id/hill_dialog_height"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp" />
 
     <LinearLayout
         android:id="@+id/walked_linear_layout"
@@ -30,14 +31,16 @@
         <TextView
             android:id="@+id/hill_dialog_walked_date"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 
 
     <TextView
         android:id="@+id/hill_dialog_location"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
