--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="uk.co.openmoments.hillbagging.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:name="uk.co.openmoments.hillbagging.ui.tracking.LiveTrackingFragment"
+        android:label="@string/title_live_tracking"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
