--- a/app/src/main/res/layout/fragment_live_tracking.xml
+++ b/app/src/main/res/layout/fragment_live_tracking.xml
@@ -7,20 +7,22 @@
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/live_track_map_view"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:clickable="true"
+        android:apiKey="@string/google_maps_key" />
 
     <LinearLayout
         android:id="@+id/live_tracking_inprogress_buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="60dp"
-        android:layout_marginLeft="10dp"
         android:background="@drawable/layout_rounded"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
