--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -27,4 +27,16 @@
             app:useSimpleSummaryProvider="true"
             android:title="@string/track_map_type_title" />
     </PreferenceCategory>
+
+    <PreferenceCategory app:title="@string/nearby_header">
+        <EditTextPreference
+            app:key="nearby_distance"
+            app:title="@string/nearby_distance_title"
+            android:defaultValue="10"
+            android:inputType="numberDecimal"
+            android:digits="0123456789"
+            android:key="nearby_distance"
+            android:summary="@string/nearby_distance_summary"
+            android:title="@string/nearby_distance_title" />
+    </PreferenceCategory>
 </PreferenceScreen>
