--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,8 @@
         android:icon="@drawable/ic_map_black_24dp"
         android:title="@string/title_live_tracking" />
 
+    <item
+        android:id="@+id/navigation_nearby"
+        android:icon="@drawable/ic_near_me_black_24dp"
+        android:title="@string/title_nearby" />
 </menu>
