--- a/app/src/main/res/layout/activity_import_export.xml
+++ b/app/src/main/res/layout/activity_import_export.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ImportExportActivity">
 
+    <!-- Import Hills -->
     <TextView
         android:id="@+id/import_title"
         android:layout_width="match_parent"
@@ -37,4 +38,53 @@
         app:layout_constraintTop_toBottomOf="@id/import_desc"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <!-- Export Hills -->
+    <TextView
+        android:id="@+id/export_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/export_hill"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constrainedHeight="false"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/import_btn" />
+
+    <TextView
+        android:id="@+id/export_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/export_hill_desc"
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toBottomOf="@id/export_title"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/export_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text=""
+        android:selectAllOnFocus="true"
+        android:textIsSelectable="true"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="false"
+        android:maxLines="10"
+        app:layout_constraintTop_toBottomOf="@id/export_desc"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/export_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/export_button"
+        app:layout_constraintTop_toBottomOf="@id/export_text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
